--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "1.0.0",
   "private": false,
   "scripts": {
-    "start": "PORT=4000 nodemon --exec babel-node app.js",
+    "start": "PORT=4000 nodemon --exec babel-node src/app.js",
+    "build": "babel src -d dist",
     "test": "yarn lint && babel-node ./node_modules/mocha/bin/mocha",
     "lint": "eslint app.js lib/**/*.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
@@ -28,7 +29,6 @@
     "eslint-plugin-prettier": "^3.1.2",
     "mocha": "^7.1.1",
     "nodemon": "^2.0.3",
-    "parcel": "^1.12.4",
     "prettier": "^2.0.4"
   }
 }
