--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "private": false,
   "scripts": {
-    "start": "PORT=4000 nodemon --exec babel-node src/app.js",
+    "start": "PORT=4004 nodemon --exec babel-node src/app.js",
     "build": "babel src -d dist",
     "test": "yarn lint && babel-node ./node_modules/mocha/bin/mocha",
     "lint": "eslint app.js lib/**/*.js",
@@ -13,6 +13,10 @@
   },
   "dependencies": {
     "bufferutil": "^4.0.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.3",
+    "express-session": "^1.17.0",
+    "morgan": "^1.10.0",
     "nconf": "^0.10.0",
     "utf-8-validate": "^5.0.2",
     "uuid": "^7.0.3",
