--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
     "express-session": "^1.17.0",
+    "frameguard": "^3.1.0",
     "morgan": "^1.10.0",
     "nconf": "^0.10.0",
     "utf-8-validate": "^5.0.2",
