--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "p5-websocket-server",
   "description": "A lightweight realtime server for hosting p5js sketch-to-sketch communication.",
   "author": "Adam Bachman @abachman",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": false,
   "scripts": {
     "start": "PORT=4004 nodemon --exec babel-node src/app.js",
     "build": "babel src -d dist",
     "test": "yarn lint && babel-node ./node_modules/mocha/bin/mocha",
-    "lint": "eslint app.js lib/**/*.js",
+    "lint": "eslint src/app.js src/lib/**/*.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
   },
   "dependencies": {
