--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "PORT=4004 nodemon --exec babel-node src/app.js",
     "build": "babel src -d dist",
-    "test": "yarn lint && babel-node ./node_modules/mocha/bin/mocha",
+    "test": "jest",
     "lint": "eslint src/app.js src/lib/**/*.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
   },
@@ -28,11 +28,12 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
+    "babel-jest": "^26.0.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "mocha": "^7.1.1",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.3",
     "prettier": "^2.0.4"
   }
