--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "1.1.1",
   "private": false,
   "scripts": {
-    "start": "PORT=4004 nodemon --exec babel-node src/app.js",
+    "start": "node dist/app.js",
+    "start-dev": "PORT=4004 nodemon --exec babel-node src/app.js",
     "build": "babel src -d dist",
     "test": "jest",
     "lint": "eslint src/app.js src/lib/**/*.js",
