--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": ["prettier"],
   "plugins": ["prettier"],
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/eslint-plugin",
   "rules": {
     "prettier/prettier": "error"
   }
