--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": false,
   "scripts": {
     "start": "node dist/app.js",
-    "start-dev": "PORT=4004 nodemon --exec babel-node src/app.js",
-    "build": "babel src -d dist",
+    "start-dev": "PORT=4004 nodemon --exec ts-node src/app.ts",
+    "build": "node build.js",
     "test": "jest",
     "lint": "eslint src/app.js src/lib/**/*.js",
     "deploy": "pm2 deploy ecosystem.config.js production"
@@ -20,6 +20,7 @@
     "frameguard": "^3.1.0",
     "morgan": "^1.10.0",
     "nconf": "^0.10.0",
+    "typescript": "^4.2.3",
     "utf-8-validate": "^5.0.2",
     "uuid": "^7.0.3",
     "ws": "^7.2.3"
@@ -29,13 +30,21 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
+    "@types/express": "^4.17.11",
+    "@types/express-handlebars": "^3.1.0",
+    "@types/express-session": "^1.17.3",
+    "@types/morgan": "^1.9.2",
+    "@types/uuid": "^8.3.0",
+    "@types/ws": "^7.4.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
+    "esbuild": "^0.9.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^26.0.1",
     "nodemon": "^2.0.3",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "ts-node": "^9.1.1"
   }
 }
