--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "start-dev": "PORT=4004 nodemon --exec ts-node src/app.ts",
     "build": "tsc",
     "test": "jest",
-    "lint": "eslint src/app.js src/lib/**/*.js",
+    "lint": "eslint src/app.ts src/lib/**/*.ts",
     "deploy": "pm2 deploy ecosystem.config.js production"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^6.3.0",
     "bufferutil": "^4.0.1",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
@@ -22,7 +23,7 @@
     "nconf": "^0.11.4",
     "utf-8-validate": "^5.0.2",
     "uuid": "^7.0.3",
-    "ws": "^7.4.6"
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -33,14 +34,15 @@
     "@types/express-session": "^1.17.3",
     "@types/morgan": "^1.9.2",
     "@types/uuid": "^8.3.0",
-    "@types/ws": "^7.4.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^26.0.1",
+    "@types/ws": "^8.5.5",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.2",
     "nodemon": "^2.0.20",
-    "prettier": "^2.0.4",
+    "prettier": "^3.0.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^5.1.6"
   }
 }
